tests/jastadd/negative/type_errors/L1/4_TypeCheckingIfStmt2.ob
MODULE TestModule;
BEGIN
	IF 1 < 2 THEN
	ELSIF 5 + 2 THEN
	END
END TestModule.
